# ipython-odoo

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  callbacks-2.txt  callbacks.txt  setup.cfg  setup.py
.githooks/: pre-push
ipython_odoo/: __init__.py  access.py  connect.py  hierarchy.py  magic.py  main.py  model_names.py  procurement_rules.py  procurmenet_rules.py  property_values.py  ref.py  related_fields.py  table.py  tables.py  tracer.py  utils.py
tests/: test_access.py  test_ipython_odoo.py
