[metadata]
name = ipython-odoo
version = attr: ipython_odoo.__version__

author = Dmitry Voronin
author_email = dimka665@gmail.com
url = https://github.com/voronind/ipython-odoo

description = Project description
keywords =
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2 :: Only
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:

[tool:pytest]
testpaths = tests
norecursedirs =
    .*/
    docs/

[flake8]
max-line-length = 120
exclude =
    .*/,
    docs/_build/

[coverage:run]
branch = True
source =
    ipython_odoo/

[mypy]
check_untyped_defs = yes

[tox:tox]
envlist = py27, docs
skipsdist = true

[testenv]
skip_install = true
deps = pipenv
commands =
    pipenv install --dev --skip-lock
    pipenv run fulltest

[testenv:docs]
basepython = python2.7
deps =
    pipenv
    sphinx
commands =
    pipenv install --skip-lock
    pipenv run doctest
    pipenv run build-docs

[bumpr]
file = ipython_odoo/__init__.py
files = setup.py
tests = pytest
vcs = git
verbose = yes

[bumpr:bump]
part = patch
